--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^7.2.13",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng5-slider": "^1.1.14",
     "rxjs": "~6.3.3",
